--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+lib_extra_dirs = ~/Documents/Arduino/libraries
+
+
+monitor_speed = 115200
